service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
