ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ubnt-microk8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2
            port:
              number: 80
  tls:
    - hosts:
      - ubnt-microk8s
      secretName: secret-1
